WexGit/Wex_DX/force-app/main/default/objects/Wex__c/fields/API_Timeout_ms__c.field-meta.xml
<CustomField>
    <fullName>API_Timeout_ms__c</fullName>
    <label>API Timeout (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>