WexGit/Wex_DX/force-app/main/default/objects/Wex__c/fields/Shipping_Account_Search_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Search_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Account Search Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>